# profiling_postgres

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
notebooks/: Untitled.ipynb  pandas_vs_polars.ipynb
scripts/db/: 01-init.sql
