[tool.poetry]
name = "profiling-postgress"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "profiling_postgress"}]

[tool.poetry.dependencies]
python = "^3.11"
black = {extras = ["jupyter"], version = "23.3.0"}
flake8 = "6.0.0"
isort = "5.12.0"
jupyter = "^1.0.0"
jupyterlab-code-formatter = "1.5.3"
mypy = "1.3.0"
numpy = "1.25.0"
pandas = "2.0"
pandas-stubs = "2.0.3.230814"
polars = "^0.19.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
